--- a/src/app/flight-search/pages/flight-search-page/flight-search-page.component.html
+++ b/src/app/flight-search/pages/flight-search-page/flight-search-page.component.html
@@ -76,37 +76,43 @@
       <tui-error *ngIf="date?.touched && date?.invalid" error="Date is required"></tui-error>
     </div>
 
-    <tui-select class="passengers-block" formControlName="passengers" [stringify]="stringifyPassengers">
-      <tui-data-list *tuiDataList>
-        <button tuiOption *ngFor="let item of passengerItems">
-          <div class="passengers-item">
-            <div class="passengers-label">
-              <span class="passengers-label-category">{{ item.category | titlecase }}</span>
-              <span class="passengers-label-description">{{ item.description }}</span>
+    <div class="passengers-block">
+      <tui-select formControlName="passengers" [stringify]="stringifyPassengers">
+        <tui-data-list *tuiDataList>
+          <button tuiOption *ngFor="let item of passengerItems">
+            <div class="passengers-item">
+              <div class="passengers-label">
+                <span class="passengers-label-category">{{ item.category | titlecase }}</span>
+                <span class="passengers-label-description">{{ item.description }}</span>
+              </div>
+              <div class="passengers-select-controls">
+                <button
+                  tuiIconButton
+                  type="button"
+                  appearance="icon"
+                  icon="tuiIconMinusCircleLarge"
+                  (click)="modifyPassengers(item.category, -1)"
+                ></button>
+                <span class="passengers-quantity">
+                  {{ passengers?.value?.[item.category] }}
+                </span>
+                <button
+                  tuiIconButton
+                  type="button"
+                  appearance="icon"
+                  icon="tuiIconPlusCircleLarge"
+                  (click)="modifyPassengers(item.category, 1)"
+                ></button>
+              </div>
             </div>
-            <div class="passengers-select-controls">
-              <button
-                tuiIconButton
-                type="button"
-                appearance="icon"
-                icon="tuiIconMinusCircleLarge"
-                (click)="modifyPassengers(item.category, -1)"
-              ></button>
-              <span class="passengers-quantity">
-                {{ passengers?.value?.[item.category] }}
-              </span>
-              <button
-                tuiIconButton
-                type="button"
-                appearance="icon"
-                icon="tuiIconPlusCircleLarge"
-                (click)="modifyPassengers(item.category, 1)"
-              ></button>
-            </div>
-          </div>
-        </button>
-      </tui-data-list>
-    </tui-select>
+          </button>
+        </tui-data-list>
+      </tui-select>
+      <tui-error
+        *ngIf="passengers?.touched && passengers?.hasError('adultValidator')"
+        [error]="passengers?.getError('adultValidator')"
+      ></tui-error>
+    </div>
   </div>
 
   <div class="tui-form__buttons tui-form__buttons_align_end">
