--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="card-content" *ngFor="let passenger of booking.passengerData">
-        <div class="passenger">{{ passenger.firstName.toUpperCase() }} {{ passenger.lastName.toUpperCase() }}</div>
+        <div class="passenger">{{ passenger.firstName | uppercase }} {{ passenger.lastName | uppercase }}</div>
         <div class="baggage">
           <div *ngIf="passenger.baggageCount">{{ passenger.baggageCount }} checked bag (total 23 kg) included</div>
           <div *ngIf="passenger.passengerCategory !== 'infants'">
@@ -26,20 +26,20 @@
   <div class="payment-wrapper">
     <div class="card">
       <div class="category" *ngFor="let passenger of passengerCategories; index as i">
-        <div class="category-wrapper" *ngIf="passenger[1]">
+        <div class="category-wrapper" *ngIf="booking.passengers[passenger]">
           <div class="category-title">
-            <span> {{ passenger[1] }} x {{ passenger[0] | titlecase }} Fare </span>
+            <span> {{ booking.passengers[passenger] }} x {{ passenger | titlecase }} Fare </span>
             <span>
-              {{ getPriceForPassengerCategory(passenger[0]) | number | currency }}
+              {{ getPriceForPassengerCategory(passenger) | number | currency }}
             </span>
           </div>
           <div class="details">
             <span>Fare</span>
-            <span>{{ getFareForPassengerCategory(passenger[0]) | number | currency }}</span>
+            <span>{{ getFareForPassengerCategory(passenger) | number | currency }}</span>
           </div>
           <div class="details">
             <span>Tax & Service Charge</span>
-            <span>{{ getTaxForPassengerCategory(passenger[0]) | number | currency }}</span>
+            <span>{{ getTaxForPassengerCategory(passenger) | number | currency }}</span>
           </div>
         </div>
       </div>
