feat: add styles

--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.scss
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.scss
@@ -1,5 +1,10 @@
 @use 'src/app/shared/styles/colors' as *;
 
+* {
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -21,16 +26,18 @@
 }
 
 .card {
-  width: 50%;
+  max-width: 551px;
   box-shadow: 0 1px 4px rgb(0 0 0 / 20%);
   border-radius: 8px;
 }
 
 .card-header {
   background: var(--tui-base-03);
-  padding: 1rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
+  border-radius: 8px 8px 0 0;
+  border-top: 3px solid $color-primary;
 }
 
 .flight {
@@ -48,7 +55,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 2rem;
 }
 
 .buttons-wrapper {
@@ -60,24 +67,42 @@
 .category-wrapper {
   display: flex;
   flex-direction: column;
-  padding: 1rem 1rem 0;
+  padding: 2rem 2rem 0;
 }
 
 .details {
   display: flex;
   justify-content: space-between;
-  padding: 0 2rem;
-  max-width: 320px;
+  padding: 0 0 0 3rem;
 }
 
 .total {
   display: flex;
-  padding: 1rem;
+  padding: 2rem;
   justify-content: space-between;
-  max-width: calc(320px + 2rem);
+  font-weight: 600;
+}
+
+.total-price {
+  color: $color-primary;
 }
 
 .category-title {
   display: flex;
   justify-content: space-between;
+  font-weight: 600;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+
+  @media (width <= 768px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.payment-wrapper {
+  grid-column-start: 2;
 }
