--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <h1 class="title"><tui-svg src="/assets/icons/preview.svg"></tui-svg> Summary</h1>
-  <div class="flights-wrapper">
+  <div class="grid">
     <div class="card" *ngFor="let flight of booking.flightsData">
       <div class="card-header">
         <div class="flight">
@@ -22,33 +22,34 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="payment-wrapper">
-    <div class="card">
-      <div class="category" *ngFor="let passenger of passengerCategories; index as i">
-        <div class="category-wrapper" *ngIf="booking.passengers[passenger]">
-          <div class="category-title">
-            <span> {{ booking.passengers[passenger] }} x {{ passenger | titlecase }} Fare </span>
-            <span>
-              {{ getPriceForPassengerCategory(passenger) | number | currency }}
-            </span>
-          </div>
-          <div class="details">
-            <span>Fare</span>
-            <span>{{ getFareForPassengerCategory(passenger) | number | currency }}</span>
-          </div>
-          <div class="details">
-            <span>Tax & Service Charge</span>
-            <span>{{ getTaxForPassengerCategory(passenger) | number | currency }}</span>
+    <div class="payment-wrapper">
+      <div class="card">
+        <div class="category" *ngFor="let passenger of passengerCategories; index as i">
+          <div class="category-wrapper" *ngIf="booking.passengers[passenger]">
+            <div class="category-title">
+              <span> {{ booking.passengers[passenger] }} x {{ passenger | titlecase }} Fare </span>
+              <span>
+                {{ getPriceForPassengerCategory(passenger) | number | currency }}
+              </span>
+            </div>
+            <div class="details">
+              <span>Fare</span>
+              <span>{{ getFareForPassengerCategory(passenger) | number | currency }}</span>
+            </div>
+            <div class="details">
+              <span>Tax & Service Charge</span>
+              <span>{{ getTaxForPassengerCategory(passenger) | number | currency }}</span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="total">
-        <span>TOTAL:</span>
-        <span>{{ getTotalPrice() | number | currency }}</span>
+        <div class="total">
+          <span>TOTAL:</span>
+          <span class="total-price">{{ getTotalPrice() | number | currency }}</span>
+        </div>
       </div>
     </div>
   </div>
+
   <div class="buttons-wrapper">
     <button tuiButton appearance="flat" type="button">Back</button>
     <button tuiButton type="button" appearance="outline">Add to order cart</button>
