fix: use 'flex-end' instead of 'end' in scss styles of summary-page

--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.scss
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.scss
@@ -61,7 +61,7 @@
 .buttons-wrapper {
   display: flex;
   gap: 1rem;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .category-wrapper {
