feat: redesign baggage form control in booking-passengers

--- a/src/app/booking/pages/booking-passengers-page/booking-passengers-page.component.html
+++ b/src/app/booking/pages/booking-passengers-page/booking-passengers-page.component.html
@@ -87,7 +87,13 @@
           </div>
 
           <div class="form-field">
-            <tui-input-count formControlName="baggage" tuiTextfieldPostfix="kg">Checked-in baggage</tui-input-count>
+            <tui-input-count
+              #baggage
+              formControlName="baggage"
+              [tuiTextfieldPostfix]="'item' | pluralize : baggage.value ?? 0"
+              tuiHintContent="Each item up to 23kg"
+              >Checked-in baggage</tui-input-count
+            >
           </div>
         </div>
       </div>
