feat: implement registration

--- a/src/app/core/components/tabbed-forms/tabbed-forms.component.html
+++ b/src/app/core/components/tabbed-forms/tabbed-forms.component.html
@@ -9,6 +9,6 @@
   </ng-container>
 
   <ng-template #signup>
-    <air-signup-form (formSubmit)="onSignupFormSubmit()"></air-signup-form>
+    <air-signup-form (formSubmit)="onSignupFormSubmit($event)"></air-signup-form>
   </ng-template>
 </div>
