feat: add section with info about selected flights to header (WIP)

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,50 +1,81 @@
 <header class="header">
-  <div class="content-wrapper">
-    <a routerLink="/" class="logo-link">
-      <img src="assets/logo.svg" alt="Logo" class="logo" />
-    </a>
-    <air-progress-bar *ngIf="showProgressBar"></air-progress-bar>
-    <div class="buttons-wrapper">
-      <form class="form" [formGroup]="userSettingsForm">
-        <tui-select tuiTextfieldSize="s" formControlName="dateFormat" class="date-format">
-          Date format
-          <tui-data-list-wrapper *tuiDataList [items]="dateFormats"></tui-data-list-wrapper>
-        </tui-select>
+  <div class="content">
+    <div class="content-wrapper">
+      <a routerLink="/" class="logo-link">
+        <img src="assets/logo.svg" alt="Logo" class="logo" />
+      </a>
+      <air-progress-bar *ngIf="showProgressBar"></air-progress-bar>
+      <div class="buttons-wrapper">
+        <form class="form" [formGroup]="userSettingsForm">
+          <tui-select tuiTextfieldSize="s" formControlName="dateFormat" class="date-format">
+            Date format
+            <tui-data-list-wrapper *tuiDataList [items]="dateFormats"></tui-data-list-wrapper>
+          </tui-select>
 
-        <tui-select tuiTextfieldSize="s" formControlName="currency" class="currency">
-          Currency
-          <tui-data-list-wrapper *tuiDataList [items]="currencies"></tui-data-list-wrapper>
-        </tui-select>
-      </form>
+          <tui-select tuiTextfieldSize="s" formControlName="currency" class="currency">
+            Currency
+            <tui-data-list-wrapper *tuiDataList [items]="currencies"></tui-data-list-wrapper>
+          </tui-select>
+        </form>
 
-      <ng-container *tuiLet="user$ | async as user">
-        <button *ngIf="!user" tuiButton size="s" type="button" icon="tuiIconUser" (click)="openLoginModal()">
-          Sign in
-        </button>
-        <div *ngIf="user" class="user-buttons">
-          <button tuiButton size="s" type="button" icon="tuiIconUser" routerLink="/user/account">
-            {{ user.firstName }} {{ user.lastName }}
+        <ng-container *tuiLet="user$ | async as user">
+          <button *ngIf="!user" tuiButton size="s" type="button" icon="tuiIconUser" (click)="openLoginModal()">
+            Sign in
           </button>
-          <button
-            tuiIconButton
-            size="s"
-            type="button"
-            icon="tuiIconLogOut"
-            aria-label="Sign out"
-            (click)="logout()"
-          ></button>
-        </div>
-      </ng-container>
-      <button
-        tuiIconButton
-        routerLink="/user/cart"
-        size="m"
-        shape="rounded"
-        type="button"
-        appearance="icon"
-        icon="tuiIconShoppingBag"
-        class="shopping-bag"
-      ></button>
+          <div *ngIf="user" class="user-buttons">
+            <button tuiButton size="s" type="button" icon="tuiIconUser" routerLink="/user/account">
+              {{ user.firstName }} {{ user.lastName }}
+            </button>
+            <button
+              tuiIconButton
+              size="s"
+              type="button"
+              icon="tuiIconLogOut"
+              aria-label="Sign out"
+              (click)="logout()"
+            ></button>
+          </div>
+        </ng-container>
+        <button
+          tuiIconButton
+          routerLink="/user/cart"
+          size="m"
+          shape="rounded"
+          type="button"
+          appearance="icon"
+          icon="tuiIconShoppingBag"
+          class="shopping-bag"
+        ></button>
+      </div>
     </div>
+
+    <ng-container *tuiLet="flightSearchData$ | async as flightSearchData">
+      <div *ngIf="flightSearchData" class="flight-content-wrapper">
+        <div class="airports">
+          <span>{{ flightSearchData.departure.name }}</span>
+          <tui-svg src="/assets/icons/plane-directions.svg"></tui-svg>
+          <span>{{ flightSearchData.arrival.name }}</span>
+        </div>
+
+        <div class="flight-info">
+          <span>{{ flightSearchData.flightType | titlecase }}</span>
+          <span class="bullet"></span>
+          <span *ngIf="flightSearchData.returnDate; else oneway"
+            >{{ flightSearchData.flightDate | date : 'd LLL' }} -
+            {{ flightSearchData.returnDate | date : 'd LLL' }}</span
+          >
+          <ng-template #oneway
+            ><span>{{ flightSearchData.flightDate | date : 'd LLL' }}</span></ng-template
+          >
+          <span class="bullet"></span>
+          <div class="passengers">
+            <span>{{ flightSearchData.passengers | countPassengers }}</span>
+            <tui-svg class="passengers-icon" src="/assets/icons/person.svg"></tui-svg>
+          </div>
+        </div>
+
+        <button tuiButton type="button" size="s" appearance="secondary" (click)="onFlightSearchEdit()">Edit</button>
+      </div>
+    </ng-container>
   </div>
 </header>
