feat: switch booking-flights page to real backend data

--- a/src/app/booking/components/flight-card/flight-card.component.html
+++ b/src/app/booking/components/flight-card/flight-card.component.html
@@ -7,7 +7,7 @@
   >
     <span class="date">{{ flight.departureDate | date : 'dd MMM' : 'Z' }}</span>
     <span class="weekday">Monday</span>
-    <span *ngIf="!isDisabled; else noflight" class="price">{{ flight.price | currency : 'EUR' }}</span>
+    <span *ngIf="!isDisabled; else noflight" class="price">{{ flight.price.EUR | currency : 'EUR' }}</span>
   </div>
 
   <ng-template #noflight>
