refactor: rewrite data use for booking-flights-page & flight-search-page

--- a/src/app/booking/pages/booking-passengers-page/booking-passengers-page.component.html
+++ b/src/app/booking/pages/booking-passengers-page/booking-passengers-page.component.html
@@ -115,7 +115,7 @@
   </div>
 
   <div class="buttons-block">
-    <button tuiButton type="button" appearance="outline">Back</button>
+    <button tuiButton type="button" appearance="outline" (click)="onBackButton()">Back</button>
     <button tuiButton type="submit" [disabled]="!passengersForm.valid">Continue</button>
   </div>
 </form>
