--- a/src/app/booking/components/flight-card/flight-card.component.html
+++ b/src/app/booking/components/flight-card/flight-card.component.html
@@ -6,7 +6,7 @@
     (click)="onSelectFlight()"
   >
     <span class="date">{{ flight.departureDate | date : 'dd MMM' : 'Z' }}</span>
-    <span class="weekday">Monday</span>
+    <span class="weekday">{{ flight.departureDate | date : 'EEEE' }}</span>
     <span *ngIf="!isDisabled; else noflight" class="price">{{ flight.price.total.EUR | currency : 'EUR' }}</span>
   </div>
 
