--- a/src/app/booking/components/flight-carousel/flight-carousel.component.html
+++ b/src/app/booking/components/flight-carousel/flight-carousel.component.html
@@ -12,13 +12,16 @@
 
   <tui-carousel #carousel [duration]="0" [itemsCount]="displayItemsCount" [(index)]="index">
     <ng-container *ngFor="let flight of flights; index as i">
-      <air-flight-card
-        *tuiItem
-        [flight]="flight"
-        [index]="i"
-        [isSelected]="i === selectedIndex"
-        (flightSelect)="onSelectFlight($event)"
-      ></air-flight-card>
+      <ng-container *ngIf="userSettings$ | async as userSettings">
+        <air-flight-card
+          *tuiItem
+          [flight]="flight"
+          [index]="i"
+          [isSelected]="i === selectedIndex"
+          [preferredCurrency]="userSettings.currency"
+          (flightSelect)="onSelectFlight($event)"
+        ></air-flight-card>
+      </ng-container>
     </ng-container>
   </tui-carousel>
 
