--- a/src/app/booking/pages/booking-flights-page/booking-flights-page.component.html
+++ b/src/app/booking/pages/booking-flights-page/booking-flights-page.component.html
@@ -14,6 +14,7 @@
           <air-flight-carousel
             [flights]="flightsData.flights"
             [isVisible]="!isDepartureConfirmed"
+            [userSettings$]="userSettings$"
             (selectFlight)="onSelectDepartureFlight($event)"
           ></air-flight-carousel>
 
@@ -39,6 +40,7 @@
           <air-flight-carousel
             [flights]="flightsData.returnFlights"
             [isVisible]="!isArrivalConfirmed"
+            [userSettings$]="userSettings$"
             (selectFlight)="onSelectArrivalFlight($event)"
           ></air-flight-carousel>
 
