--- a/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
+++ b/src/app/booking/pages/booking-summary-page/booking-summary-page.component.html
@@ -27,22 +27,22 @@
             <div class="category-title">
               <span> {{ booking.passengers[passenger] }} x {{ passenger | titlecase }} Fare </span>
               <span>
-                {{ getPriceForPassengerCategory(passenger) | number | currency }}
+                {{ getPriceForPassengerCategory(passenger) | currency : preferredCurrency }}
               </span>
             </div>
             <div class="details">
               <span>Fare</span>
-              <span>{{ getFareForPassengerCategory(passenger) | number | currency }}</span>
+              <span>{{ getFareForPassengerCategory(passenger) | currency : preferredCurrency }}</span>
             </div>
             <div class="details">
               <span>Tax & Service Charge</span>
-              <span>{{ getTaxForPassengerCategory(passenger) | number | currency }}</span>
+              <span>{{ getTaxForPassengerCategory(passenger) | currency : preferredCurrency }}</span>
             </div>
           </div>
         </div>
         <div class="total">
           <span>TOTAL:</span>
-          <span class="total-price">{{ getTotalPrice() | number | currency }}</span>
+          <span class="total-price">{{ getTotalPrice() | currency : preferredCurrency }}</span>
         </div>
       </div>
     </div>
