fix: complete on the fly currency change for booking-flights

--- a/src/app/booking/pages/booking-flights-page/booking-flights-page.component.html
+++ b/src/app/booking/pages/booking-flights-page/booking-flights-page.component.html
@@ -18,12 +18,15 @@
             (selectFlight)="onSelectDepartureFlight($event)"
           ></air-flight-carousel>
 
-          <air-flight-details
-            *ngIf="departureFlightIdx !== null"
-            [flight]="flightsData.flights[departureFlightIdx]"
-            [isFlightSelected]="isDepartureConfirmed"
-            (confirmFlight)="onConfirmDepartureFlight($event)"
-          ></air-flight-details>
+          <ng-container *ngIf="userSettings$ | async as userSettings">
+            <air-flight-details
+              *ngIf="departureFlightIdx !== null"
+              [flight]="flightsData.flights[departureFlightIdx]"
+              [isFlightSelected]="isDepartureConfirmed"
+              [preferredCurrency]="userSettings.currency"
+              (confirmFlight)="onConfirmDepartureFlight($event)"
+            ></air-flight-details>
+          </ng-container>
         </div>
       </div>
 
@@ -44,13 +47,16 @@
             (selectFlight)="onSelectArrivalFlight($event)"
           ></air-flight-carousel>
 
-          <air-flight-details
-            *ngIf="arrivalFlightIdx !== null"
-            [flight]="flightsData.returnFlights[arrivalFlightIdx]"
-            [isFlightSelected]="isArrivalConfirmed"
-            [isDeparture]="false"
-            (confirmFlight)="onConfirmArrivalFlight($event)"
-          ></air-flight-details>
+          <ng-container *ngIf="userSettings$ | async as userSettings">
+            <air-flight-details
+              *ngIf="arrivalFlightIdx !== null"
+              [flight]="flightsData.returnFlights[arrivalFlightIdx]"
+              [isFlightSelected]="isArrivalConfirmed"
+              [isDeparture]="false"
+              [preferredCurrency]="userSettings.currency"
+              (confirmFlight)="onConfirmArrivalFlight($event)"
+            ></air-flight-details>
+          </ng-container>
         </div>
       </div>
     </div>
