feat: change date format on the fly in flight-card component

--- a/src/app/booking/components/flight-carousel/flight-carousel.component.html
+++ b/src/app/booking/components/flight-carousel/flight-carousel.component.html
@@ -18,6 +18,7 @@
           [flight]="flight"
           [index]="i"
           [isSelected]="i === selectedIndex"
+          [dateFormat]="userSettings.dateFormat"
           [preferredCurrency]="userSettings.currency"
           (flightSelect)="onSelectFlight($event)"
         ></air-flight-card>
