--- a/src/app/booking/components/flight-card/flight-card.component.html
+++ b/src/app/booking/components/flight-card/flight-card.component.html
@@ -5,7 +5,7 @@
     [ngClass]="{ 'no-flight': isDisabled, selected: isSelected }"
     (click)="onSelectFlight()"
   >
-    <span class="date">{{ flight.departureDate | date : 'dd MMM' : 'Z' }}</span>
+    <span class="date">{{ flight.departureDate | date : getDateFormatForPipe(dateFormat) : 'Z' }}</span>
     <span class="weekday">{{ flight.departureDate | date : 'EEEE' : 'Z' }}</span>
     <span *ngIf="!isDisabled; else noflight" class="price">{{
       flight.price.total[preferredCurrency] | currency : preferredCurrency
